--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "file-saver": "^1.3.3",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "jquery": "^3.1.1",
+    "jszip": "^3.1.3",
     "resolve-url-loader": "^1.6.1",
     "style-loader": "^0.13.1",
     "tslint": "^4.1.1",
